# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\BrandController;
 use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -15,6 +16,11 @@ Route::post('/login', [AuthController::class, 'login']);
 
 // User crud routes
 Route::apiResource('users', UserController::class);
+
+// Brand crud routes
+Route::post('/brands/{id}', [BrandController::class, 'update']);
+Route::apiResource('brands', BrandController::class);
+
 
 Route::middleware('auth:sanctum')->group(function () {
 
